Add EnableDynamicAgentLoading in POM